--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,41 +9,9 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/favicon-16x16.png?v=6",
-      "sizes": "16x16",
+      "src": "/favicon.png",
+      "sizes": "any",
       "type": "image/png"
-    },
-    {
-      "src": "/favicon-32x32.png?v=6",
-      "sizes": "32x32",
-      "type": "image/png"
-    },
-    {
-      "src": "/favicon-48x48.png?v=6",
-      "sizes": "48x48",
-      "type": "image/png"
-    },
-    {
-      "src": "/favicon-64x64.png?v=6",
-      "sizes": "64x64",
-      "type": "image/png"
-    },
-    {
-      "src": "/favicon-128x128.png?v=6",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "/android-chrome-192x192.png?v=6",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/android-chrome-512x512.png?v=6",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
     }
   ],
   "categories": [
@@ -66,8 +34,8 @@
       "url": "/calculator",
       "icons": [
         {
-          "src": "/favicon-128x128.png?v=6",
-          "sizes": "128x128"
+          "src": "/favicon.png",
+          "sizes": "any"
         }
       ]
     },
@@ -78,8 +46,8 @@
       "url": "/contact",
       "icons": [
         {
-          "src": "/favicon-128x128.png?v=6",
-          "sizes": "128x128"
+          "src": "/favicon.png",
+          "sizes": "any"
         }
       ]
     }
