fix(seo): GSC Feb 2026 remediation batch - delete orphaned pages, add redirects, clean middleware
- Delete 9 orphaned blog/page directories that conflicted with redirect rules
- Add 5 new redirects in vercel.json (purchase-loans, luxury-markets, orange-county-jumbo-loans, northwood, summer-2025)
- Add 13 sitemap exclusions in next-sitemap.config.js
- Remove 11 duplicate redirect entries from middleware.ts that conflicted with vercel.json
- Resolves: redirect errors, duplicate canonical, crawled-not-indexed GSC issues

--- a/vercel.json
+++ b/vercel.json
@@ -587,6 +587,31 @@
       "source": "/blog/wholesale-mortgage-broker-92887",
       "destination": "/blog/wholesale-mortgage-broker-north-orange-county-2026#yorba-linda",
       "permanent": true
+    },
+    {
+      "source": "/purchase-loans",
+      "destination": "/loan-programs",
+      "permanent": true
+    },
+    {
+      "source": "/luxury-markets",
+      "destination": "/areas",
+      "permanent": true
+    },
+    {
+      "source": "/orange-county-jumbo-loans",
+      "destination": "/jumbo-loans-orange-county",
+      "permanent": true
+    },
+    {
+      "source": "/areas/irvine-neighborhoods/northwood-mortgage-broker",
+      "destination": "/areas/irvine-neighborhoods",
+      "permanent": true
+    },
+    {
+      "source": "/guides/summer-2025-market-guide",
+      "destination": "/blog",
+      "permanent": true
     }
   ],
   "trailingSlash": false,
